{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 450,
  "lineage": "26bb5b38-5c6e-f4ee-b46e-e5f72fe9e602",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "backend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/backend-lb/frontendIPConfigurations/backend-config",
                "name": "backend-config",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/publicIPAddresses/backend-lb-pip"
              }
            ],
            "id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/backend-lb",
            "location": "eastus",
            "name": "backend-lb",
            "resource_group_name": "terraform-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.backend_lb_pip",
            "azurerm_resource_group.main_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "frontend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/frontend-lb/frontendIPConfigurations/frontend-config",
                "name": "frontend-config",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/publicIPAddresses/frontend-lb-pip"
              }
            ],
            "id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/frontend-lb",
            "location": "eastus",
            "name": "frontend-lb",
            "resource_group_name": "terraform-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.frontend_lb_pip",
            "azurerm_resource_group.main_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend_bap",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/backend-lb/backendAddressPools/backend-bap",
            "loadbalancer_id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/backend-lb",
            "name": "backend-bap"
          },
          "dependencies": [
            "azurerm_lb.backend_lb",
            "azurerm_public_ip.backend_lb_pip",
            "azurerm_resource_group.main_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "frontend_bap",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/frontend-lb/backendAddressPools/frontend-bap",
            "loadbalancer_id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/frontend-lb",
            "name": "frontend-bap"
          },
          "dependencies": [
            "azurerm_lb.frontend_lb",
            "azurerm_public_ip.frontend_lb_pip",
            "azurerm_resource_group.main_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_pool",
      "name": "backend_nat_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_port": 22,
            "floating_ip_enabled": false,
            "frontend_ip_configuration_id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/backend-lb/frontendIPConfigurations/backend-config",
            "frontend_ip_configuration_name": "backend-config",
            "frontend_port_end": 50319,
            "frontend_port_start": 50200,
            "id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/backend-lb/inboundNatPools/backend-nat-pool",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/backend-lb",
            "name": "backend-nat-pool",
            "protocol": "Tcp",
            "resource_group_name": "terraform-rg",
            "tcp_reset_enabled": false
          },
          "dependencies": [
            "azurerm_lb.backend_lb",
            "azurerm_public_ip.backend_lb_pip",
            "azurerm_resource_group.main_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_pool",
      "name": "frontend_nat_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_port": 22,
            "floating_ip_enabled": false,
            "frontend_ip_configuration_id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/frontend-lb/frontendIPConfigurations/frontend-config",
            "frontend_ip_configuration_name": "frontend-config",
            "frontend_port_end": 50119,
            "frontend_port_start": 50000,
            "id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/frontend-lb/inboundNatPools/frontend-nat-pool",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/frontend-lb",
            "name": "frontend-nat-pool",
            "protocol": "Tcp",
            "resource_group_name": "terraform-rg",
            "tcp_reset_enabled": false
          },
          "dependencies": [
            "azurerm_lb.frontend_lb",
            "azurerm_public_ip.frontend_lb_pip",
            "azurerm_resource_group.main_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "backend_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/backend-lb/probes/backend-probe",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/backend-lb",
            "name": "backend-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.backend_lb",
            "azurerm_public_ip.backend_lb_pip",
            "azurerm_resource_group.main_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "frontend_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/frontend-lb/probes/frontend-probe",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/frontend-lb",
            "name": "frontend-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.frontend_lb",
            "azurerm_public_ip.frontend_lb_pip",
            "azurerm_resource_group.main_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "backend_lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/backend-lb/backendAddressPools/backend-bap"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/backend-lb/frontendIPConfigurations/backend-config",
            "frontend_ip_configuration_name": "backend-config",
            "frontend_port": 80,
            "id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/backend-lb/loadBalancingRules/backend-lb-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/backend-lb",
            "name": "backend-lb-rule",
            "probe_id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/backend-lb/probes/backend-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.backend_lb",
            "azurerm_lb_backend_address_pool.backend_bap",
            "azurerm_lb_probe.backend_probe",
            "azurerm_public_ip.backend_lb_pip",
            "azurerm_resource_group.main_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "frontend_lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/frontend-lb/backendAddressPools/frontend-bap"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/frontend-lb/frontendIPConfigurations/frontend-config",
            "frontend_ip_configuration_name": "frontend-config",
            "frontend_port": 80,
            "id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/frontend-lb/loadBalancingRules/frontend-lb-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/frontend-lb",
            "name": "frontend-lb-rule",
            "probe_id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/loadBalancers/frontend-lb/probes/frontend-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.frontend_lb",
            "azurerm_lb_backend_address_pool.frontend_bap",
            "azurerm_lb_probe.frontend_probe",
            "azurerm_public_ip.frontend_lb_pip",
            "azurerm_resource_group.main_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/vmss-nsg",
            "location": "eastus",
            "name": "vmss-nsg",
            "resource_group_name": "terraform-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22"
                ],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-vm1",
            "location": "eastus",
            "name": "nsg-vm1",
            "resource_group_name": "terraform-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "80"
                ],
                "direction": "Inbound",
                "name": "Allow-SSH-HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "backend_lb_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/publicIPAddresses/backend-lb-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.179.0.62",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "backend-lb-pip",
            "resource_group_name": "terraform-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.main_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "frontend_lb_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/publicIPAddresses/frontend-lb-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.90.208.55",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "frontend-lb-pip",
            "resource_group_name": "terraform-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.main_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet/subnets/subnet_1",
            "name": "subnet_1",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "terraform-rg",
            "virtual_network_name": "terraform-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main_rg",
            "azurerm_virtual_network.main_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet/subnets/subnet_2",
            "name": "subnet_2",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "terraform-rg",
            "virtual_network_name": "terraform-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main_rg",
            "azurerm_virtual_network.main_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3a746bd7-bec3-484f-a7a7-6b1fd4014c08",
            "id": "/subscriptions/67857d77-d782-46ed-b8f7-4b14afe47f33/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet",
            "location": "eastus",
            "name": "terraform-vnet",
            "resource_group_name": "terraform-rg"
          },
          "dependencies": [
            "azurerm_resource_group.main_rg"
          ]
        }
      ]
    }
  ]
}